# bank

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  interceptor.py  local.yml  pyproject.toml
.envs/: .env.example
api-collections/: bruno.json
api-collections/accounts/: Deposit to Account - Teller.bru  Download Transaction PDF.bru  Initiate Transfer - Customer.bru  Transaction History.bru  Transfer Step 2 - Security Answer.bru  Transfer Step 3 - Verify OTP.bru  folder.bru
api-collections/authentication/: Activate Account.bru  Confirm Password Reset.bru  Login Account.bru  Logout Session.bru  Refresh Token.bru  Register Customer.bru  Request Password Reset.bru  Resend Activation Link.bru  Verify OTP Code.bru
api-collections/bank-account/: Initiate transfer - Customer.bru  Transfer Step 3 - Verify-OTP.bru  Verify and Activate Account.bru  folder.bru
api-collections/cards/: Create Card.bru  Create a Card.bru  Delete Card.bru  Delete a Card.bru  Get All Cards.bru  Top Up Card.bru  Untitled.bru  folder.bru
api-collections/environments/: bank-endpoints.bru
api-collections/profiles/: Create Next of Kin.bru  Delete Next of Kin.bru  Get My Profile.bru  List Managed Profiles.bru  List Next of Kin.bru  Retrieve Next of Kin.bru  Update My Profile.bru  Update Next of Kin.bru  folder.bru
config/: celery_app.py  settings.py  urls.py
config/settings/: __init__.py  base.py  local.py
core_apps/: cookie_auth.py
core_apps/accounts/: admin.py  emails.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
core_apps/accounts/migrations/: 0001_initial.py  0002_bankaccount_interest_rate_and_more.py
core_apps/cards/: admin.py  emails.py  models.py  serializers.py  utils.py  views.py
core_apps/cards/migrations/: 0001_initial.py
core_apps/common/: admin.py  models.py  permissions.py  renderers.py
core_apps/common/migrations/: 0001_initial.py
core_apps/templates/emails/: account_created.html  bank_account_activated.html  deposit_confirmation.html  otp_email.html  suspicious_activity_alert.html  transfer_notification.html  transfer_otp_email.html  virtual_card_topup.html  withdrawal_confirmation.html
core_apps/user_auth/: admin.py  apps.py  emails.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
core_apps/user_auth/migrations/: 0001_initial.py
core_apps/user_profile/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
core_apps/user_profile/migrations/: 0001_initial.py  0002_profile_account_currency_profile_account_type.py
requirements/: base.txt  local.txt  production.txt
(+4 files in other folders)
